Fix <pre> blocks with horizontal scroll

--- a/templates/c2/css/main.css
+++ b/templates/c2/css/main.css
@@ -30,6 +30,7 @@ pre {
     border: 1px solid darkgrey;
     padding: 15px;
     background-color: lightgrey;
+    overflow-x: scroll;
 }
 
 .diff {
